# rust-prime-number-api

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
