[package]
name = "rust-prime-number-api"
version = "0.1.0"
edition = "2021"
authors = ["Michael Montoya <michael.montoya1@changehealthcare.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"